tests/functional2/lang/string-coerce-integers/no-xp.err.exp
error:
       … while evaluating a string interpolation
         at /pwd/in.nix:1:2:
            1| "${42}" == "42"
             |  ^
            2|

       error: cannot coerce an integer to a string: 42
